fixed icon spacing

--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -60,6 +60,8 @@ body {
   background: #018d80;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
+  width: 100%;
+  height: auto;
 }
 .icons li:hover {
   background: #0063b7;
